--- a/GUI/GUIClient.py.save.1
+++ b/GUI/GUIClient.py.save.1
@@ -1,7 +1,8 @@
 import Tkinter as tk
 import time, socket, sys, time, json
-
-
+import __builtin__
+__builtin__.isWeather = 1
+__builtin__.isNews = 1
 
 class Client():
 
@@ -64,29 +65,39 @@ class GUI():
 	
         #font = "Courier"
         font = "Nidus Sans"
-        self.isWeather = 1
-        self.isNews = 1
         self.root = tk.Tk()
         self.root.attributes('-fullscreen', True)
         self.root.configure(background = 'black')
-	self.client = Client()
+        self.client = Client()
 	self.W = tk.StringVar()
 	self.N = tk.StringVar()
-	self.clockLabel = tk.Label(self.root, text = "", font = (font, 50), background = 'black', foreground = 'white')
-	self.weatherLabel = tk.Label(self.root, textvariable = self.W, font = (font, 40), background = 'black', foreground = 'white')
-	self.newsLabel = tk.Label(self.root, textvariable = self.N, font = (font, 10), background = 'black', foreground = 'white')
-	self.clockLabel.pack(side = 'top')
-	self.weatherLabel.pack(side = 'left')
-	self.newsLabel.pack(side = 'right')
-	self.updateClock()
-	self.root.mainloop()
+        self.clockLabel = tk.Label(self.root, text = "", font = (font, 50), background = 'black', foreground = 'white')
+        self.weatherLabel = tk.Label(self.root, textvariable = self.W, font = (font, 40), background = 'black', foreground = 'white')
+        self.newsLabel = tk.Label(self.root, textvariable = self.N, font = (font, 10), background = 'black', foreground = 'white')
+        self.clockLabel.pack(side = 'top')
+        self.weatherLabel.pack(side = 'left')
+        self.newsLabel.pack(side = 'right')
+        self.updateAll()
+        self.updateClock()
+        self.root.mainloop()
 
+    '''def voiceCMDs(self, voice):
+        if voice == 'news on':
+            self.updateNews()
+        if voice == 'news off':
+            newsdat = self.client.recieveData('news off')
+	    self.N.set(newsdat)
+        if voice == 'weather on':
+            self.updateWeather()
+        if voice == 'weather off':
+            weatherdat = self.client.receiveData('weather off')
+	    self.N.set('weatherdat')'''
 
     def newsOff(self):
-	self.isNews = 0
+	self.N.set(" ")
 
     def weatherOff(self):
-	self.isWeather = 0	        
+	self.W.set(" ")	        
 
     def updateClock(self):
         timeString = time.strftime('%H:%M')
@@ -94,17 +105,16 @@ class GUI():
         self.root.after(60000, lambda: self.updateClock())
 
     def updateWeather(self):
-        if self.isWeather==1:
-            weatherData = self.client.recieveData('weather')
-	    weatherString = weatherData.get('summary')
+        if __builtin__.isWeather:
+            weatherString = weatherData.get('summary')
         else:
             weatherString = ' ' 
-            self.W.set(weatherString)
-        '''self.root.after(1000, lambda: self.updateWeather())'''
+        self.W.set(weatherString)
+        self.root.after(1000, lambda: self.updateWeather())
  
 
     def updateNews(self):
-        if self.isNews==1:
+        if __builtin__.isNews:
             newsData = self.client.recieveData('news')
             articles = newsData.get('articles')
             newsString = ''
@@ -115,11 +125,9 @@ class GUI():
         else:
             newsString = ' ' 
         self.N.set(newsString)
-        '''self.root.after(1000, lambda: self.updateNews())'''
+        self.root.after(1000, lambda: self.updateNews())
 
     def updateAll(self):
         self.updateWeather()
         self.updateNews()
-
-g = GUI()
-g.startGUI()
+        '''self.root.after(1800000, lambda: self.updateAll())'''
